deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: final
  template:
    metadata:
      labels:
        app: final
    spec:
      containers:
      - name: server-front
        image: gcr.io/final/server111:1.0
        ports:
        - containerPort: 3000
      - name: server-back
        image: gcr.io/final/server112:1.0
        ports:
        - containerPort: 5000
