deploymentBack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: server-back
        image: gcr.io/sopes-295304/back:1.0
        ports:
        - containerPort: 5000
