deploymentFront.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: server-front
        image: gcr.io/sopes-295304/front:1.0
        ports:
        - containerPort: 3000
