service.yml
apiVersion: v1
kind: Service
metadata:
  name: final-service
spec:
  selector:
    app: final
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
