serviceFront.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
